WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314791
ASSERTION FAILED: !shadowRoot() || shadowRoot()->mode() == ShadowRootMode::UserAgent
https://bugs.webkit.org/show_bug.cgi?id=314791
Summary
ASSERTION FAILED: !shadowRoot() || shadowRoot()->mode() == ShadowRootMode::Us...
Fujii Hironori
Reported
2026-05-13 23:30:59 PDT
With GTK release build with ENABLE_ASSERTS=1 of
313206@main
, in <
https://www.msn.com/ja-jp
>, sometimes I got the following assertion failure. ASSERTION FAILED: !shadowRoot() || shadowRoot()->mode() == ShadowRootMode::UserAgent /sdk/webkit/Source/WebCore/dom/Element.cpp(3530) : ShadowRoot *WebCore::Element::userAgentShadowRoot() const 1 0x7ffbe7d9f717 WebCore::Element::userAgentShadowRoot() const 2 0x7ffbe9550e84 WebCore::Style::invalidateAssignedElements(WebCore::HTMLSlotElement&) 3 0x7ffbe95506ec WebCore::Style::Invalidator::invalidateIfNeeded(WebCore::Element&, WebCore::Style::SelectorMatchingState*) 4 0x7ffbe9551892 WebCore::Style::Invalidator::invalidateStyleForDescendants(WebCore::Element&, WebCore::Style::SelectorMatchingState*) 5 0x7ffbe95509cb WebCore::Style::Invalidator::invalidateInShadowTreeIfNeeded(WebCore::Element&) 6 0x7ffbe955839e WebCore::Style::Invalidator::invalidateWithMatchElementRuleSets(WebCore::Element&, WTF::HashMap<WTF::GenericHashKey<WebCore::Style::MatchElement, WTF::DefaultHash<WebCore::Style::MatchElement> >, WTF::Vector<WebCore::Style::RuleSetAndNegation, 1ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WTF::DefaultHash<WTF::GenericHashKey<WebCore::Style::MatchElement, WTF::DefaultHash<WebCore::Style::MatchElement> > >, WTF::HashTraits<WTF::GenericHashKey<WebCore::Style::MatchElement, WTF::DefaultHash<WebCore::Style::MatchElement> > >, WTF::HashTraits<WTF::Vector<WebCore::Style::RuleSetAndNegation, 1ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> >, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc> const&) 7 0x7ffbe7d9303d WebCore::Element::addAttributeInternal(WebCore::QualifiedName const&, WTF::AtomString const&, WebCore::Element::InSynchronizationOfLazyAttribute) 8 0x7ffbe7d928f2 WebCore::Element::setAttribute(WTF::AtomString const&, mpark::variant<WTF::Ref<WebCore::TrustedHTML, WTF::RawPtrTraits<WebCore::TrustedHTML>, WTF::DefaultRefDerefTraits<WebCore::TrustedHTML> >, WTF::Ref<WebCore::TrustedScript, WTF::RawPtrTraits<WebCore::TrustedScript>, WTF::DefaultRefDerefTraits<WebCore::TrustedScript> >, WTF::Ref<WebCore::TrustedScriptURL, WTF::RawPtrTraits<WebCore::TrustedScriptURL>, WTF::DefaultRefDerefTraits<WebCore::TrustedScriptURL> >, WTF::AtomString> const&) 9 0x7ffbe60c8e2a WebCore::jsElementPrototypeFunction_setAttribute(JSC::JSGlobalObject*, JSC::CallFrame*) 10 0x7ffb8507c1fd ???
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2026-05-15 13:05:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65004
EWS
Comment 2
2026-05-15 15:16:54 PDT
Committed
313334@main
(6bd49ed6463b): <
https://commits.webkit.org/313334@main
> Reviewed commits have been landed. Closing PR #65004 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-05-15 15:17:12 PDT
<
rdar://problem/177199331
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug