ASSERTION FAILED: !shadowRoot() || shadowRoot()->mode() == ShadowRootMode::UserAgent https://bugs.webkit.org/show_bug.cgi?id=314791

Reviewed by Alan Baradlay.

Some callers of userAgentShadowRoot were expecting the function to check shadow root's
type and return nullptr when it's not an user-agent shadow root. Do that instead of
merely asserting in debug builds.

Test: fast/shadow-dom/style-invalidation-slotted-element-with-author-shadow-root-crash.html

* LayoutTests/fast/shadow-dom/style-invalidation-slotted-element-with-author-shadow-root-crash-expected.txt: Added.
* LayoutTests/fast/shadow-dom/style-invalidation-slotted-element-with-author-shadow-root-crash.html: Added.
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::userAgentShadowRoot const):

Canonical link: https://commits.webkit.org/313334@main